{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 31,
  "lineage": "364c9b77-6657-9381-7e35-4e369f67c5a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0723af03e9777d57f",
            "association_id": "eipassoc-020c1408da605289b",
            "domain": "vpc",
            "id": "eipalloc-0723af03e9777d57f",
            "instance": "i-0518f4396cb4f0514",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0f36353c0601a8193",
            "private_dns": "ip-10-0-1-196.eu-west-1.compute.internal",
            "private_ip": "10.0.1.196",
            "public_dns": "ec2-108-128-50-39.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.50.39",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.test_ec2",
            "aws_internet_gateway.vpc_test_igw",
            "aws_security_group.vpc_test_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089950bc622d39ed8",
            "arn": "arn:aws:ec2:eu-west-1:891440700613:instance/i-0518f4396cb4f0514",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0518f4396cb4f0514",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkinspoc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f36353c0601a8193",
            "private_dns": "ip-10-0-1-196.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.196",
            "public_ip": "52.51.80.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03422a273a3a43dfd",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0646017eb0e84a55f",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034926d4ec310f465"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_test_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891440700613:internet-gateway/igw-085fee5b3ab72a24d",
            "id": "igw-085fee5b3ab72a24d",
            "owner_id": "891440700613",
            "vpc_id": "vpc-0badc55ce0cb3b361"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_test_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-085fee5b3ab72a24d",
            "id": "r-rtb-09cc150ec900eaa871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09cc150ec900eaa87",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_test_igw",
            "aws_route_table.vpc_test_route_table",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_test_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891440700613:route-table/rtb-09cc150ec900eaa87",
            "id": "rtb-09cc150ec900eaa87",
            "owner_id": "891440700613",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0badc55ce0cb3b361"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_test_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a54f558f3882e2c7",
            "route_table_id": "rtb-09cc150ec900eaa87",
            "subnet_id": "subnet-0646017eb0e84a55f"
          },
          "dependencies": [
            "aws_route_table.vpc_test_route_table",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_test_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891440700613:security-group/sg-034926d4ec310f465",
            "description": "vpc_test_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034926d4ec310f465",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "vpc_test_sg",
            "name_prefix": "",
            "owner_id": "891440700613",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0badc55ce0cb3b361"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891440700613:subnet/subnet-0646017eb0e84a55f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0646017eb0e84a55f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891440700613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0badc55ce0cb3b361"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891440700613:vpc/vpc-0badc55ce0cb3b361",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03df89bc48d755ccc",
            "default_route_table_id": "rtb-06c9adbbc0aa8609a",
            "default_security_group_id": "sg-0ab11f4bbcea907ee",
            "dhcp_options_id": "dopt-b717e7d0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0badc55ce0cb3b361",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c9adbbc0aa8609a",
            "owner_id": "891440700613",
            "tags": {
              "Name": "vpc-test"
            },
            "tags_all": {
              "Name": "vpc-test"
            }
          }
        }
      ]
    }
  ]
}